index.html has been changed

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: "魅族内核团队"
-tagline: "致力于打造更好的 Linux 产品"
-description: "魅族内核团队的官方博客。"
+title: "ByteJog"
+tagline: "致力于嵌入式Linux驱动开发"
+description: "ByteJog's Blogs。"
 ---
 {% include JB/setup %}
 
