--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: "嵌入式Linux"
+title: "嵌入式Linux工作站"
 tagline: "致力于嵌入式Linux驱动开发"
-description: "ByteJog's Blogs。"
+description: "嵌入式Linux工作站"
 ---
 {% include JB/setup %}
 
